--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-mocha": "^2.1.3",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
