Adding conditions for tonight and week of messaging.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 node_modules
 src/indexbuster.js
 publish
+date_test_gwd/gwd_preview_Buster_Date_Test_GWD_IMG
+date_test_gwd/gwd_preview_Buster_Date_Test_GWD
