--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^3.5.0",
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-jasmine": "^2.2.1",
     "gulp-mocha": "^2.1.3",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "gulp-webpack": "^1.5.0",
+    "jasmine": "^2.4.1",
+    "mocha": "^2.4.4",
     "moment": "^2.10.6",
     "moment-timezone": "^0.4.0",
     "run-sequence": "^1.1.4",
     "webpack": "^1.12.2"
-  }
+  },
+  "dependencies": {}
 }
